# sup-smt-plugin

./: Makefile.am  README.md  autogen.sh  configure.ac
include/: linear_sup_plugin.h  log_sup_plugin.h  sup_plugin.h
test/: linear_sup_plugin_test.cpp  log_sup_plugin_test.cpp
